--- a/apps/public/src/assets/styles/layout/layout.scss
+++ b/apps/public/src/assets/styles/layout/layout.scss
@@ -126,3 +126,7 @@ hr {
 .bold {
   font-weight: bold;
 }
+
+.no-padding {
+  padding: 0;
+}
